[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Tilesheet/towerDefense_tilesheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/PNG/Default size/towerDefense_tile249.png" type="Texture" id=2]
[ext_resource path="res://Maps/Map 1.gd" type="Script" id=3]
[ext_resource path="res://Assets/Font_InGameUI.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/PNG/Default size/towerDefense_tile250.png" type="Texture" id=5]
[ext_resource path="res://Maps/End Area.gd" type="Script" id=6]
[ext_resource path="res://Assets/PNG/Default size/towerDefense_tile287.png" type="Texture" id=7]
[ext_resource path="res://Assets/PNG/Default size/towerDefense_tile289.png" type="Texture" id=8]
[ext_resource path="res://UI/Death Screen.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/Esc Menu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/PNG/Default size/towerDefense_tile206.png" type="Texture" id=11]

[sub_resource type="TileSet" id=1]
0/name = "Main Tiles"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 1472, 832 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 20, 10 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Cannon Base"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 1088, 64, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -40, 224, 0, 0, 0, 0, 608, 224, 0, 0, 0, 0, 608, 552, 0, 0, 0, 0, 928, 552, 0, 0, 0, 0, 928, 216, 0, 0, 0, 0, 1192, 216, 0, 0, 0, 0, 1192, 864, 0, 0, 0, 0, -40, 864 )
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 48 )

[node name="Map 1" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
z_index = -2
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 327689, 1, 0, 327689, 2, 0, 327689, 3, 0, 327689, 4, 0, 327689, 5, 0, 327689, 6, 0, 327689, 7, 0, 327689, 8, 0, 327689, 9, 0, 327689, 10, 0, 327689, 11, 0, 327689, 12, 0, 327689, 13, 0, 327689, 14, 0, 327689, 15, 0, 327689, 16, 0, 327689, 17, 0, 327689, 18, 0, 327689, 19, 0, 327689, 20, 0, 327689, 21, 0, 327689, 22, 0, 327689, 23, 0, 327689, 24, 0, 458767, 25, 0, 327684, 26, 0, 327684, 27, 0, 327684, 28, 0, 327684, 29, 0, 327684, 65536, 0, 327689, 65537, 0, 327689, 65538, 0, 327689, 65539, 0, 327689, 65540, 0, 327689, 65541, 0, 327689, 65542, 0, 327689, 65543, 0, 327689, 65544, 0, 327689, 65545, 0, 327689, 65546, 0, 327689, 65547, 0, 327689, 65548, 0, 327689, 65549, 0, 327689, 65550, 0, 327689, 65551, 0, 327689, 65552, 0, 327689, 65553, 0, 327689, 65554, 0, 327689, 65555, 0, 327689, 65556, 0, 327689, 65557, 0, 327689, 65558, 0, 327689, 65559, 0, 327689, 65560, 0, 458767, 65561, 0, 327684, 65562, 0, 327684, 65563, 0, 327684, 65564, 0, 327684, 65565, 0, 327684, 131072, 0, 196609, 131073, 0, 196609, 131074, 0, 196609, 131075, 0, 196609, 131076, 0, 196609, 131077, 0, 196609, 131078, 0, 196609, 131079, 0, 196609, 131080, 0, 196609, 131081, 0, 196609, 131082, 0, 196610, 131083, 0, 327689, 131084, 0, 327689, 131085, 0, 196608, 131086, 0, 196609, 131087, 0, 196609, 131088, 0, 196609, 131089, 0, 196609, 131090, 0, 196609, 131091, 0, 196610, 131092, 0, 327689, 131093, 0, 327689, 131094, 0, 327689, 131095, 0, 327689, 131096, 0, 458767, 131097, 0, 327684, 131098, 0, 327684, 131099, 0, 327684, 131100, 0, 327684, 131101, 0, 327684, 196608, 0, 262145, 196609, 0, 262145, 196610, 0, 262145, 196611, 0, 262145, 196612, 0, 262145, 196613, 0, 262145, 196614, 0, 262145, 196615, 0, 262145, 196616, 0, 262145, 196617, 0, 262145, 196618, 0, 262146, 196619, 0, 327689, 196620, 0, 327689, 196621, 0, 262144, 196622, 0, 262145, 196623, 0, 262145, 196624, 0, 262145, 196625, 0, 262145, 196626, 0, 262145, 196627, 0, 262146, 196628, 0, 327689, 196629, 0, 327684, 196630, 0, 327684, 196631, 0, 327684, 196632, 0, 458767, 196633, 0, 327684, 196634, 0, 327684, 196635, 0, 327684, 196636, 0, 327684, 196637, 0, 327684, 262144, 0, 327681, 262145, 0, 327681, 262146, 0, 327681, 262147, 0, 327681, 262148, 0, 327681, 262149, 0, 327681, 262150, 0, 327681, 262151, 0, 327681, 262152, 0, 196612, 262153, 0, 262145, 262154, 0, 262146, 262155, 1, 0, 262156, 0, 327689, 262157, 0, 262144, 262158, 0, 262145, 262159, 0, 196611, 262160, 0, 327681, 262161, 0, 196612, 262162, 0, 262145, 262163, 0, 262146, 262164, 0, 327689, 262165, 0, 327684, 262166, 0, 327689, 262167, 0, 327689, 262168, 0, 458767, 262169, 0, 327684, 262170, 0, 327684, 262171, 0, 327684, 262172, 0, 327684, 262173, 0, 327684, 327680, 0, 327689, 327681, 1, 0, 327682, 0, 327689, 327683, 1, 0, 327684, 0, 327689, 327685, 1, 0, 327686, 0, 327689, 327687, 1, 0, 327688, 0, 262144, 327689, 0, 262145, 327690, 0, 262146, 327691, 0, 327689, 327692, 0, 327689, 327693, 0, 262144, 327694, 0, 262145, 327695, 0, 262146, 327696, 0, 327689, 327697, 0, 262144, 327698, 0, 262145, 327699, 0, 262146, 327700, 0, 327689, 327701, 0, 327684, 327702, 0, 327689, 327703, 0, 327689, 327704, 0, 458767, 327705, 0, 327684, 327706, 0, 327684, 327707, 0, 327684, 327708, 0, 327684, 327709, 0, 327684, 393216, 0, 327689, 393217, 0, 327689, 393218, 0, 327689, 393219, 0, 327689, 393220, 0, 327689, 393221, 0, 327689, 393222, 0, 327689, 393223, 0, 327689, 393224, 0, 262144, 393225, 0, 262145, 393226, 0, 262146, 393227, 1, 0, 393228, 0, 327689, 393229, 0, 262144, 393230, 0, 262145, 393231, 0, 262146, 393232, 1, 0, 393233, 0, 262144, 393234, 0, 262145, 393235, 0, 262146, 393236, 1, 0, 393237, 0, 327684, 393238, 0, 327689, 393239, 0, 327689, 393240, 0, 458767, 393241, 0, 327684, 393242, 0, 327684, 393243, 0, 327684, 393244, 0, 327684, 393245, 0, 327684, 458752, 0, 327689, 458753, 0, 327689, 458754, 0, 327689, 458755, 0, 327689, 458756, 0, 327689, 458757, 0, 327689, 458758, 0, 327689, 458759, 1, 0, 458760, 0, 262144, 458761, 0, 262145, 458762, 0, 262147, 458763, 0, 196609, 458764, 0, 196609, 458765, 0, 262148, 458766, 0, 262145, 458767, 0, 262146, 458768, 0, 327689, 458769, 0, 262144, 458770, 0, 262145, 458771, 0, 262146, 458772, 0, 327689, 458773, 0, 327684, 458774, 0, 327689, 458775, 0, 327689, 458776, 0, 458767, 458777, 0, 327684, 458778, 0, 327684, 458779, 0, 327684, 458780, 0, 327684, 458781, 0, 327684, 524288, 0, 327689, 524289, 0, 327689, 524290, 0, 327689, 524291, 0, 327689, 524292, 0, 327689, 524293, 0, 327689, 524294, 0, 327689, 524295, 0, 327684, 524296, 0, 262144, 524297, 0, 262145, 524298, 0, 262145, 524299, 0, 262145, 524300, 0, 262145, 524301, 0, 262145, 524302, 0, 262145, 524303, 0, 262146, 524304, 1, 0, 524305, 0, 262144, 524306, 0, 262145, 524307, 0, 262146, 524308, 1, 0, 524309, 0, 327684, 524310, 0, 327689, 524311, 0, 327689, 524312, 0, 458767, 524313, 0, 327684, 524314, 0, 327684, 524315, 0, 327684, 524316, 0, 327684, 524317, 0, 327684, 589824, 0, 327689, 589825, 0, 327689, 589826, 0, 327689, 589827, 0, 327689, 589828, 0, 327689, 589829, 0, 327689, 589830, 0, 327689, 589831, 1, 0, 589832, 0, 327680, 589833, 0, 327681, 589834, 0, 327681, 589835, 0, 327681, 589836, 0, 327681, 589837, 0, 327681, 589838, 0, 327681, 589839, 0, 327682, 589840, 0, 327689, 589841, 0, 262144, 589842, 0, 262145, 589843, 0, 262146, 589844, 0, 327689, 589845, 0, 327689, 589846, 0, 327689, 589847, 0, 327689, 589848, 0, 458767, 589849, 0, 327684, 589850, 0, 327684, 589851, 0, 327684, 589852, 0, 327684, 589853, 0, 327684, 655360, 0, 327689, 655361, 0, 327689, 655362, 0, 327689, 655363, 0, 327689, 655364, 0, 327689, 655365, 0, 327689, 655366, 0, 327689, 655367, 0, 327689, 655368, 0, 327689, 655369, 0, 327689, 655370, 1, 0, 655371, 0, 327689, 655372, 1, 0, 655373, 0, 327689, 655374, 1, 0, 655375, 0, 327689, 655376, 1, 0, 655377, 0, 262144, 655378, 0, 262145, 655379, 0, 262146, 655380, 1, 0, 655381, 0, 327689, 655382, 0, 327689, 655383, 0, 327689, 655384, 0, 458767, 655385, 0, 327684, 655386, 0, 327684, 655387, 0, 327684, 655388, 0, 327684, 655389, 0, 327684, 720896, 0, 327689, 720897, 1, 0, 720898, 0, 327689, 720899, 1, 0, 720900, 0, 327689, 720901, 1, 0, 720902, 0, 327689, 720903, 1, 0, 720904, 0, 327689, 720905, 0, 327689, 720906, 0, 327689, 720907, 0, 327689, 720908, 0, 327689, 720909, 0, 327689, 720910, 0, 327689, 720911, 0, 327689, 720912, 0, 327689, 720913, 0, 262144, 720914, 0, 262145, 720915, 0, 262146, 720916, 0, 327689, 720917, 0, 327689, 720918, 0, 327689, 720919, 0, 327689, 720920, 0, 458767, 720921, 0, 327684, 720922, 0, 327684, 720923, 0, 327684, 720924, 0, 327684, 720925, 0, 327684, 786432, 0, 196609, 786433, 0, 196609, 786434, 0, 196609, 786435, 0, 196609, 786436, 0, 196609, 786437, 0, 196609, 786438, 0, 196609, 786439, 0, 196609, 786440, 0, 196609, 786441, 0, 196609, 786442, 0, 196609, 786443, 0, 196609, 786444, 0, 196609, 786445, 0, 196609, 786446, 0, 196609, 786447, 0, 196609, 786448, 0, 196609, 786449, 0, 262148, 786450, 0, 262145, 786451, 0, 262146, 786452, 1, 0, 786453, 0, 327689, 786454, 0, 327689, 786455, 0, 327689, 786456, 0, 458767, 786457, 0, 327684, 786458, 0, 327684, 786459, 0, 327684, 786460, 0, 327684, 786461, 0, 327684, 851968, 0, 262145, 851969, 0, 262145, 851970, 0, 262145, 851971, 0, 262145, 851972, 0, 262145, 851973, 0, 262145, 851974, 0, 262145, 851975, 0, 262145, 851976, 0, 262145, 851977, 0, 262145, 851978, 0, 262145, 851979, 0, 262145, 851980, 0, 262145, 851981, 0, 262145, 851982, 0, 262145, 851983, 0, 262145, 851984, 0, 262145, 851985, 0, 262145, 851986, 0, 262145, 851987, 0, 262146, 851988, 0, 327689, 851989, 0, 327689, 851990, 0, 327689, 851991, 0, 327689, 851992, 0, 458767, 851993, 0, 327684, 851994, 0, 327684, 851995, 0, 327684, 851996, 0, 327684, 851997, 0, 327684, 917504, 0, 327681, 917505, 0, 327681, 917506, 0, 327681, 917507, 0, 327681, 917508, 0, 327681, 917509, 0, 327681, 917510, 0, 327681, 917511, 0, 327681, 917512, 0, 327681, 917513, 0, 327681, 917514, 0, 327681, 917515, 0, 327681, 917516, 0, 327681, 917517, 0, 327681, 917518, 0, 327681, 917519, 0, 327681, 917520, 0, 327681, 917521, 0, 327681, 917522, 0, 327681, 917523, 0, 327682, 917524, 1, 0, 917525, 0, 327689, 917526, 0, 327689, 917527, 0, 327689, 917528, 0, 458767, 917529, 0, 327684, 917530, 0, 327684, 917531, 0, 327684, 917532, 0, 327684, 917533, 0, 327684, 983040, 0, 327689, 983041, 0, 327689, 983042, 1, 0, 983043, 0, 327689, 983044, 1, 0, 983045, 0, 327689, 983046, 1, 0, 983047, 0, 327689, 983048, 1, 0, 983049, 0, 327689, 983050, 1, 0, 983051, 0, 327684, 983052, 1, 0, 983053, 0, 327689, 983054, 1, 0, 983055, 0, 327689, 983056, 1, 0, 983057, 0, 327689, 983058, 1, 0, 983059, 0, 327689, 983060, 0, 327689, 983061, 0, 327689, 983062, 0, 327689, 983063, 0, 327689, 983064, 0, 458767, 983065, 0, 327684, 983066, 0, 327684, 983067, 0, 327684, 983068, 0, 327684, 983069, 0, 327684, 1048576, 0, 327689, 1048577, 0, 327689, 1048578, 0, 327689, 1048579, 0, 327689, 1048580, 0, 327689, 1048581, 0, 327689, 1048582, 0, 327689, 1048583, 0, 327689, 1048584, 0, 327689, 1048585, 0, 327689, 1048586, 0, 327689, 1048587, 0, 327689, 1048588, 0, 327689, 1048589, 0, 327689, 1048590, 0, 327689, 1048591, 0, 327689, 1048592, 0, 327689, 1048593, 0, 327689, 1048594, 0, 327689, 1048595, 0, 327689, 1048596, 0, 327689, 1048597, 0, 327689, 1048598, 0, 327689, 1048599, 0, 327689, 1048600, 0, 458767, 1048601, 0, 327684, 1048602, 0, 327684, 1048603, 0, 327684, 1048604, 0, 327684, 1048605, 0, 327684 )
__meta__ = {
"_edit_lock_": true
}

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cannon" type="TextureButton" parent="UI"]
margin_left = 1632.0
margin_top = 96.0
margin_right = 1696.0
margin_bottom = 160.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Cannon"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.0
margin_top = -35.0
margin_right = 90.0
margin_bottom = 4.0
custom_fonts/font = ExtResource( 4 )
text = "Cannon - 100"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Missle" type="TextureButton" parent="UI"]
margin_left = 1632.0
margin_top = 192.0
margin_right = 1696.0
margin_bottom = 256.0
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Missle"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.0
margin_top = -35.0
margin_right = 90.0
margin_bottom = 4.0
custom_fonts/font = ExtResource( 4 )
text = "Missle Launcher - 300"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Cash" type="Label" parent="UI"]
margin_left = 43.5243
margin_top = 75.0
margin_right = 76.5243
margin_bottom = 97.0
custom_fonts/font = ExtResource( 4 )
text = "50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Double Cannon" type="TextureButton" parent="UI"]
margin_left = 1824.0
margin_top = 96.0
margin_right = 1888.0
margin_bottom = 160.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Double Cannon"]
margin_left = -32.0
margin_top = -80.0
margin_right = 96.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 4 )
text = "Double Cannon - 150"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="UI"]
margin_left = 100.0
margin_top = 75.0
margin_right = 133.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 4 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health Label" type="Sprite" parent="UI"]
position = Vector2( 88, 85 )
scale = Vector2( 0.4375, 0.4375 )
texture = ExtResource( 8 )

[node name="Money Label" type="Sprite" parent="UI"]
position = Vector2( 34, 85 )
scale = Vector2( 0.438, 0.438 )
texture = ExtResource( 7 )

[node name="Death Screen" parent="UI" instance=ExtResource( 9 )]
visible = false
margin_left = -395.0
margin_top = -270.0
margin_right = 355.0
margin_bottom = 230.0

[node name="EscMenu" parent="UI" instance=ExtResource( 10 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 876.0
margin_top = 462.5
margin_right = 876.0
margin_bottom = 462.5

[node name="End Area" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="End Area"]
position = Vector2( -16, 864 )
shape = SubResource( 3 )

[node name="Towers" type="Node2D" parent="."]
z_index = -1

[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="pressed" from="UI/Cannon" to="." method="_on_Cannon_pressed"]
[connection signal="pressed" from="UI/Missle" to="." method="_on_Missle_pressed"]
[connection signal="pressed" from="UI/Double Cannon" to="." method="_on_Double_Cannon_pressed"]
[connection signal="area_entered" from="End Area" to="End Area" method="_on_End_Area_area_entered"]
